--- a/client/src/app/pages/auth/Login/login.component.html
+++ b/client/src/app/pages/auth/Login/login.component.html
@@ -1,15 +1,53 @@
-<p-card header="Login Form" class="flex flex-row flex-wrap justify-content-center my-3">
-    
-</p-card>
+<div class="card-container">
+  <!-- card -->
+  <p-card
+    header="Login Form"
+    class="flex flex-row flex-wrap justify-content-center"
+    [style]="{ 'max-width': '500px', height: '100%' }"
+  >
+    <hr />
 
-<!-- card -->
-<!-- <p-card class="card-container my-3">
-    
-    <ng-template pTemplate="header">
-        <h2>Login</h2>
-    </ng-template>
-    
+    <!-- reactive form -->
+    <div class="row">
+      <div class="col m-3">
+        <form [formGroup]="myForm" autocomplete="off" (ngSubmit)="login()">
+          <!-- email -->
+          <div class="row mb-3">
+            <label class="col-sm-3 col-form-label">Email</label>
+            <div class="col-sm-9">
+              <input
+                type="email"
+                formControlName="email"
+                placeholder="Email..."
+              />
+            </div>
+          </div>
+          <!-- password -->
+          <div class="row mb-3">
+            <label class="col-sm-3 col-form-label">Password</label>
+            <div class="col-sm-9">
+              <input
+                type="password"
+                formControlName="password"
+                placeholder="Password..."
+              />
+            </div>
+          </div>
+          <button
+            [disabled]="myForm.invalid"
+            type="submit"
+            class="btn btn-primary"
+          >
+            Login
+          </button>
+        </form>
+      </div>
+    </div>
+    <!-- ------------- -->
+
     <ng-template pTemplate="footer">
-        Don't have an account? Register!
+      Don't have an account? <a routerLink="/register">Register</a>!
     </ng-template>
-</p-card> -->
+  </p-card>
+  <!-- ---- -->
+</div>
